# Ganja-TUI

./: Cargo.toml  strains.json
src/: app.rs  main.rs  message.rs  update.rs
src/ascii/: art.rs  mod.rs
src/domain/: genetics.rs  harvest.rs  mod.rs  plant.rs
src/storage/: mod.rs  persistence.rs
src/ui/: colors.rs  growing.rs  layout.rs  mod.rs  stats.rs  visual_mode.rs
