
[package]
name = "ganjatui"
version = "0.1.0"
edition = "2021"
description = "A blazingly fast terminal cannabis growing simulator"
repository = "https://github.com/zednaked/Ganja-TUI"
license = "MIT"
keywords = ["tui", "game", "simulation", "ratatui"]
categories = ["games", "command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "6.0"
rand = "0.8"
lazy_static = "1.4"
supports-color = "3.0"
